# ITMO-projects

C++/Basic syntax/: main.cpp
C++/CMake/: a.out  bye.cpp  gen_dynamic.mak  gen_static.mak  hello.cpp  here.cpp  libmylib.dylib  main.cpp  makefile_dynamic.mak  makefile_static.mak  mylib.h  test
C++/String class/: main.cpp
C++/hw1/hw1/: main.cpp
C++/hw1/hw1.xcodeproj/: project.pbxproj
C++/hw10/: CMakeLists.txt  main.cpp
C++/hw11/: BadFromStringException.cpp  BadFromStringException.h  CMakeLists.txt  main.cpp
C++/hw12/a/a/: main.cpp
C++/hw12/a/a.xcodeproj/: project.pbxproj
C++/hw12/b/b/: main.cpp
C++/hw12/b/b.xcodeproj/: project.pbxproj
C++/hw12/c/c/: main.cpp
C++/hw12/c/c.xcodeproj/: project.pbxproj
C++/hw12/d/d/: main.cpp
C++/hw12/d/d.xcodeproj/: project.pbxproj
C++/hw12/e/e/: main.cpp
C++/hw12/e/e.xcodeproj/: project.pbxproj
C++/hw3/: MakefileDynamic  MakefileStatic  bye.cpp  hello.cpp  here.cpp  mylib.h
C++/hw3/dynamic_out/: libmylib.so.5.1.10  main
C++/hw3/static_out/: main
C++/hw4/MyProject/: CMakeLists.txt
C++/hw5/: CMakeLists.txt  MyString.cpp  MyString.h  main.cpp
C++/hw6/: CMakeLists.txt  MyIntegerSet.cpp  MyIntegerSet.h  main.cpp
C++/hw7/: CMakeLists.txt  main.cpp
C++/hw8/: CMakeLists.txt  main.cpp
C++/hw8/Headers/: Animal.h  Bear.h  Man.h  ManBearPig.h  Pig.h  Unit.h
C++/hw8/Sources/: Animal.cpp  Bear.cpp  Man.cpp  ManBearPig.cpp  Pig.cpp  Unit.cpp
C++/hw9/: CMakeLists.txt  main.cpp
C++/lab7/: CMakeLists.txt  README.md  cb_details.h  circular_buffer.h  main.cpp
C++/lab8/: README.md
C++/lab8/lab8/: algo.h  algo_kociemba.cpp  algo_kociemba.h  cube.cpp  cube.h  heuristic.hpp  main.cpp  search.hpp  viewer.h  viewer_gl.cpp  virtual_rotate.cpp  virtual_rotate.h
C++/lab8/lab8.xcodeproj/: project.pbxproj
C++/problems/: hw1.txt  hw6.txt
ComputerGeometry&Graphics/: README.md
ComputerGeometry&Graphics/lab1/: CMakeLists.txt  README.md  build.sh  clean.sh  file_exceptions.cpp  file_exceptions.h  main.cpp  pnm.cpp  pnm.h
ComputerGeometry&Graphics/lab1/samples/: cat.pgm
ComputerGeometry&Graphics/lab2/: CMakeLists.txt  README.md  file_exceptions.cpp  file_exceptions.h  main.cpp  pnm.cpp  pnm.h
ComputerGeometry&Graphics/lab3/: CMakeLists.txt  README.md  config.h  file_exceptions.cpp  file_exceptions.h  main.cpp  pnm.cpp  pnm.h
ComputerGeometry&Graphics/lab4/: CMakeLists.txt  README.md  main.cpp  pnm.cpp  pnm.h
ComputerGeometry&Graphics/lab5/: CMakeLists.txt  README.md  main.cpp  pnm.cpp  pnm.h
ML/: M33122 Федотенко _Контрольная работа 1 v2.ipynb_  M33122 Федотенко Контрольная работа 2 v2  ML_lab1  ML_lab2  ML_lab3.1-3.4  ML_lab3.5-3.8  ML_lab4  ML_lab5  ML_lab6.1  ML_lab6.2  ML_lab7.1  ML_lab7.2
OOP/: README.md
OOP/Lab1/: CMakeLists.txt  main.cpp  test.ini
OOP/Lab1/ini_parser/: INIParser.cpp  INIParser.h
OOP/Lab1/ini_parser/exceptions/: DuplicateOptionException.h  DuplicateSectionException.h  Exceptions.h  INIFormatException.h  INIReaderException.h  InvalidOptionException.h  InvalidSectionException.h  InvalidTypeException.h
OOP/Lab1/ini_parser/utils/: Utilities.cpp  Utilities.h
OOP/Lab2/: CMakeLists.txt  main.cpp
OOP/Lab2/shop_manager/: ShopManager.cpp  ShopManager.h
OOP/Lab2/shop_manager/entities/: Product.cpp  Product.h  ProductWrapper.cpp  ProductWrapper.h  Shop.cpp  Shop.h
OOP/Lab2/shop_manager/utilities/: Utilities.cpp  Utilities.h
OOP/Lab3/: CMakeLists.txt  main.cpp
OOP/Lab3/race_engine/: Race.cpp  Race.h
OOP/Lab3/race_engine/entities/: AirTransport.cpp  AirTransport.h  ITransport.h  LandTransport.cpp  LandTransport.h
OOP/Lab3/race_engine/exceptions/: RaceTypeException.h  TransportTypeException.h
OOP/Lab3/race_engine/utils/: Utilities.h
OOP/Lab4/: CMakeLists.txt  main.cpp
OOP/Lab4/backup_system/entities/: AbsoluteRestorePoint.cpp  AbsoluteRestorePoint.h  Backup.cpp  Backup.h  FileInfo.cpp  FileInfo.h  IncrementalRestorePoint.cpp  IncrementalRestorePoint.h
OOP/Lab4/backup_system/utilities/: Utilities.h
OOP/Lab5/: CMakeLists.txt  main.cpp
OOP/Lab5/banks/entities/: Account.cpp  Account.h  AccountManager.cpp  AccountManager.h  Bank.cpp  Bank.h  Client.cpp  Client.h  CreditAccount.cpp  CreditAccount.h  DebitAccount.cpp  DebitAccount.h  Deposit.cpp  Deposit.h  Transaction.cpp  Transaction.h
OOP/Lab6/: CMakeLists.txt  main.cpp
OOP/Lab6/BLL/entities/collaborator/: Collaborator.cpp  Collaborator.h  CollaboratorSystem.cpp  CollaboratorSystem.h
OOP/Lab6/BLL/entities/report/: CommandReport.cpp  CommandReport.h  ReportPerDay.cpp  ReportPerDay.h  ReportPerSprint.cpp  ReportPerSprint.h
OOP/Lab6/BLL/entities/task/: Task.cpp  Task.h  TaskComment.cpp  TaskComment.h  TaskSystem.cpp  TaskSystem.h
OOP/Lab6/BLL/exceptions/: OverdueReportException.h  UnfamiliarReportException.h  UnfamiliarTaskException.h  UnresolvedTaskException.h
OOP/Lab6/DAL/: Data.cpp  Data.h  Utilities.h
OOP/Lab6/DAL/collaborators_bd/: CollaboratorData.cpp  CollaboratorData.h
OOP/Lab6/DAL/reports_bd/: ReportData.cpp  ReportData.h
OOP/Lab6/DAL/tasks_bd/: TaskData.cpp  TaskData.h
OOP/Lab6/UIL/: CollaboratorManager.cpp  CollaboratorManager.h  ReportManager.cpp  ReportManager.h  TaskManager.cpp  TaskManager.h
OS/: README.md
OS/lab1/files/: emails.lst
OS/lab1/scripts/: script1.sh  script10.sh  script2.sh  script3.sh  script4.sh  script5.sh  script6.sh  script7.sh  script8.sh  script9.sh
OS/lab2/: ans4  ans5  script1.sh  script2.sh  script3.sh  script4.sh  script5.sh  script6.sh  script7.sh
OS/lab3/: loop.sh  script1.sh  script2.sh  script3.sh  script4.sh  script5_generator.sh  script5_handler.sh
OS/lab4/: backup.sh  rmtrash.sh  untrash.sh  upback.sh
Physics/Modelling1/Modelling1/: ContentView.swift  Modelling1App.swift
Physics/Modelling1/Modelling1.xcodeproj/: project.pbxproj
iOS dev/Calc/MyCalc/: AppDelegate.swift  Calc.swift  MainViewController.swift  ObjC.h  ObjC.m  UICalcButton.swift  UILabelExtended.swift
iOS dev/Calc/MyCalc.xcodeproj/: project.pbxproj
iOS dev/Calc/MyCalcTests/: MyCalcTests.swift
iOS dev/Weather/: weather.paw
iOS dev/Weather/MyWeather/: WeatherPresenter.swift
(+661 files in other folders)
